# agentic-document-extraction-langgraph

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agents.md  architecture.md  confidentiality.md  prompts.md
domains/esg/: dictionary.json  job.json
domains/esg/ground_truth/: example_solar_2024.json
domains/esg/reports/: example_solar_2024.md  example_solar_governance_2024.md  example_solar_workforce_2024.md
domains/procurement/: dictionary.json  job.json
domains/procurement/ground_truth/: northwind_2025.json
domains/procurement/reports/: northwind_insurance_2025.md  northwind_onboarding_2025.md  northwind_security_2025.md
examples/: run_esg_demo.py  run_procurement_demo.py
src/agentic_document_extraction_langgraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/doc_extractor/: __init__.py  agents.py  checkpointing.py  cli.py  evaluation.py  graph.py  io.py  nodes.py  prompts.py  providers.py  review.py  schemas.py  state.py  validation.py
tests/: test_agents.py  test_evaluation.py  test_review_checkpointing.py  test_schemas.py  test_validation.py  test_workflow.py
